--- a/libray-project/package.json
+++ b/libray-project/package.json
@@ -1,8 +1,25 @@
 {
 	"name": "@libray-project",
-	"private": true,
+	"private": false,
 	"version": "0.0.0",
+	"license": "MIT",
+	"author": "Babatunde Taiwo",
+	"description": "A customizable, accessible, and developer-friendly React UI component library powered by Tailwind CSS, TypeScript, and Vite",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Proac-Tee/blog/tree/main/libray-project.git"
+	},
 	"type": "module",
+	"main": "./dist/libray-project-umd.cjs",
+	"module": "./dist/libray-project.js",
+	"types": "./dist/index.d.ts",
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"import": "./dist/libray-project.js",
+			"require": "./dist/libray-project-umd.cjs"
+		}
+	},
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
@@ -10,6 +27,9 @@
 		"preview": "vite preview",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build"
+	},
+	"publishConfig": {
+		"access": "public"
 	},
 	"dependencies": {
 		"class-variance-authority": "^0.7.1",
@@ -22,6 +42,8 @@
 		"@chromatic-com/storybook": "^4.1.1",
 		"@eslint/js": "^9.37.0",
 		"@storybook/addon-a11y": "^9.1.13",
+		"@semantic-release/changelog": "github:semantic-release/changelog",
+		"@semantic-release/git": "github:semantic-release/git",
 		"@storybook/addon-docs": "^9.1.13",
 		"@storybook/addon-onboarding": "^9.1.13",
 		"@storybook/addon-vitest": "^9.1.13",
@@ -31,12 +53,16 @@
 		"@types/react": "^19.1.16",
 		"@types/react-dom": "^19.1.9",
 		"@vitejs/plugin-react": "^5.0.4",
+		"@vitest/browser": "^3.2.4",
+		"@vitest/coverage-v8": "^3.2.4",
 		"eslint": "^9.36.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.22",
 		"eslint-plugin-storybook": "^9.1.13",
 		"globals": "^16.4.0",
+		"playwright": "^1.56.1",
 		"rollup-preserve-directives": "^1.1.3",
+		"semantic-release": "^25.0.0",
 		"storybook": "^9.1.13",
 		"tailwindcss": "^4.1.14",
 		"typescript": "~5.9.3",
@@ -45,9 +71,36 @@
 		"vite-plugin-dts": "^4.5.4",
 		"vite-plugin-lib-inject-css": "^2.2.2",
 		"vite-tsconfig-paths": "^5.1.4",
-		"vitest": "^3.2.4",
-		"@vitest/browser": "^3.2.4",
-		"playwright": "^1.56.1",
-		"@vitest/coverage-v8": "^3.2.4"
-	}
+		"vitest": "^3.2.4"
+	},
+	"peerDependencies": {
+		"react": "^18.2.0 || ^19.0.0",
+		"react-dom": "^18.2.0 || ^19.0.0"
+	},
+	"files": [
+		"dist",
+		"README.md"
+	],
+	"keywords": [
+		"react",
+		"ui",
+		"component-library",
+		"tailwindcss",
+		"tailwind",
+		"typescript",
+		"vite",
+		"react-components",
+		"design-system",
+		"accessible-ui",
+		"customizable-ui",
+		"react-ui-kit",
+		"frontend",
+		"web-components",
+		"ui-framework",
+		"css-in-js",
+		"react-hooks",
+		"responsive-ui",
+		"modern-ui",
+		"developer-friendly"
+	]
 }
